crates/panache-parser/tests/snapshots/yaml__yaml_suite_UKK6__02.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: UKK6/02
input: "!\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
